--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./Sass/style.css" rel="stylesheet">
     <link href="https://archive.codenoury.se/General Assets/Sass/style.css" rel="stylesheet">
-    <title>Diman Dental</title>
+    <title>Helgtandvården</title>
     <meta property="og:title" content="x">
     <meta property="og:description" content="x">
     <meta property="og:site" content="x">
@@ -34,9 +34,9 @@
     <main class="index">
         <div class="index-hero grid grid-row-2-col">
             <div class="col">
-                <h1 class="clr-white">Ledande kliniken för helgtandvård</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ullam, sed, vel laudantium quis sit optio dicta libero officia sequi exercitationem eligendi cumque accusantium vero, accusamus blanditiis? Tenetur, repudiandae minus?</p>
-                <div class="button-wrapper">
+                <h1 class="clr-white load">Ledande kliniken för helgtandvård</h1>
+                <p class="load">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ullam, sed, vel laudantium quis sit optio dicta libero officia sequi exercitationem eligendi cumque accusantium vero, accusamus blanditiis? Tenetur, repudiandae minus?</p>
+                <div class="button-wrapper load">
                     <a class="button button-blue button-pill" href="#">Boka tid</a>
                     <a class="button button-hollow-blue button-pill" href="#">Kontakta oss</a>
                 </div>
@@ -47,17 +47,18 @@
         </div>
         <div class="content-w-80">
             <div class="col">
-                <h2>Din nya helgklinik</h2>
-                <p class="large w-80-perc color-white-1">
+                <h2 class="load">Din nya helgklinik</h2>
+                <p class="large w-80-perc color-white-1 load">
                     Välkommen till den nya tandvårdskliniken helgtandvården, 
-                    här arbetar välmeriterade tandläkare specialiserade inom estetik, Invisalign(osynlig tandreglering/ställning) och implantat, 
+                    här arbetar välmeriterade tandläkare specialiserade inom estetik, Invisalign (osynlig tandreglering/ställning) och implantat, 
                     alla dagar i veckan, 
                     för samma priser som folktandvården där vi även erbjuder prisgaranti och räntefri delbetalning.
                 </p>
             </div>
         </div>
-        <div>
-            
+        <div class="content-w-80">
+            <h2 class="fade-in">Hitta till oss</h2>
+            <iframe class="google-embed fade-in" style="border:0" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJq65JNVF4X0YRLjvFdlVgwhE&key=AIzaSyCeLyjX_oPfyXFdbrM58RSZz-lX-zclCNE"></iframe>
         </div>
     </main>
 
