--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,7 +37,7 @@
                 <h1 class="clr-white load">Ledande kliniken för helgtandvård</h1>
                 <p class="load">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ullam, sed, vel laudantium quis sit optio dicta libero officia sequi exercitationem eligendi cumque accusantium vero, accusamus blanditiis? Tenetur, repudiandae minus?</p>
                 <div class="button-wrapper load">
-                    <a class="button button-blue button-pill" href="#">Boka tid</a>
+                    <a class="button button-blue button-pill" href="https://www.muntra.com/helgtandvarden/c/2604/?referral_source=helgtandv%C3%A5rden.se/" target="_blank">Boka tid</a>
                     <a class="button button-hollow-blue button-pill" href="#">Kontakta oss</a>
                 </div>
             </div>
