final index update

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,7 +24,6 @@
             </a>
             <div class="nav-desktop">
                 <ul>
-                    <li><a href="./om.html">Om oss</a></li>
                     <li><a href="#" class="button button-blue button-pill">Kontakta oss</a></li>
                 </ul>
             </div>
@@ -34,8 +33,8 @@
     <main class="index">
         <div class="index-hero grid grid-row-2-col">
             <div class="col">
-                <h1 class="clr-white load">Ledande kliniken för helgtandvård</h1>
-                <p class="load">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ullam, sed, vel laudantium quis sit optio dicta libero officia sequi exercitationem eligendi cumque accusantium vero, accusamus blanditiis? Tenetur, repudiandae minus?</p>
+                <h1 class="clr-white load">Kliniken för helgtandvård</h1>
+                <p class="load"></p>
                 <div class="button-wrapper load">
                     <a class="button button-blue button-pill" href="https://www.muntra.com/helgtandvarden/c/2604/?referral_source=helgtandv%C3%A5rden.se/" target="_blank">Boka tid</a>
                     <a class="button button-hollow-blue button-pill" href="#">Kontakta oss</a>
@@ -77,22 +76,22 @@
                     <li><a href="mailto: ndiman@outlook.com">ndiman@outlook.com</a></li>
                     <li>Org.nr: 559355-7332</li>
                     <li><a href="https://www.google.com/maps/place/Lill%C3%A5v%C3%A4gen+43,+128+45+Bagarmossen,+Sverige/data=!4m2!3m1!1s0x465f78513549aeab:0x11c2605576c53b2e?sa=X&ved=2ahUKEwicx_Lax9z0AhXipIsKHTGrC0MQ8gF6BAgPEAE">Lillåvägen 43, 128 45 Bagarmossen, Sverige</a></li>
+                    <li>Öppettider: Mån-Sön: 07:00 - 21:00</li>
                 </ul>
             </div>
             <div class="footer-col">
                 <ul>
-                    <li><h5>Sidor</h5></li>
+
                 </ul>
             </div>
             <div class="footer-col">
                 <ul>
-                    <li><h5>Column 3</h5></li>
+
                 </ul>
             </div>
         </div>
         <div class="footer-separator"></div>
         <div class="footer-row">
-            <p class="copyright-footer">&copy; Helgtanvården AB 2021</p>
         </div>
     </footer>
     <script src="./JS/main.js" defer type="module"></script>
