--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,7 +24,7 @@
             </a>
             <div class="nav-desktop">
                 <ul>
-                    <li><a href="#" class="button button-blue button-pill">Kontakta oss</a></li>
+                    <li><a href="mailto: ndiman@outlook.com" class="button button-blue button-pill">Kontakta oss</a></li>
                 </ul>
             </div>
         </nav>
@@ -37,7 +37,7 @@
                 <p class="load"></p>
                 <div class="button-wrapper load">
                     <a class="button button-blue button-pill" href="https://www.muntra.com/helgtandvarden/c/2604/?referral_source=helgtandv%C3%A5rden.se/" target="_blank">Boka tid</a>
-                    <a class="button button-hollow-blue button-pill" href="#">Kontakta oss</a>
+                    <a class="button button-hollow-blue button-pill" href="mailto: ndiman@outlook.com">Kontakta oss</a>
                 </div>
             </div>
             <video autoplay="true" loop="true" playsinline muted id="hero-video">
@@ -72,7 +72,7 @@
         <div class="footer-row footer-row-col">
             <div class="footer-col">
                 <ul>
-                    <li><h5>Helgtanvården</h5></li>
+                    <li><h5>Helgtandvården</h5></li>
                     <li><a href="mailto: ndiman@outlook.com">ndiman@outlook.com</a></li>
                     <li>Org.nr: 559355-7332</li>
                     <li><a href="https://www.google.com/maps/place/Lill%C3%A5v%C3%A4gen+43,+128+45+Bagarmossen,+Sverige/data=!4m2!3m1!1s0x465f78513549aeab:0x11c2605576c53b2e?sa=X&ved=2ahUKEwicx_Lax9z0AhXipIsKHTGrC0MQ8gF6BAgPEAE">Lillåvägen 43, 128 45 Bagarmossen, Sverige</a></li>
