--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,10 +7,12 @@
     <link href="./Sass/style.css" rel="stylesheet">
     <link href="https://archive.codenoury.se/General Assets/Sass/style.css" rel="stylesheet">
     <title>Helgtandvården</title>
-    <meta property="og:title" content="x">
+    <meta property="og:title" content="Helgtandvården">
     <meta property="og:description" content="x">
     <meta property="og:site" content="x">
     <meta property="og:site_name" content="x">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Assets/favicon-16x16.png">
 </head>
 <body>
     <header>
@@ -95,5 +97,5 @@
             <p class="copyright-footer">&copy; Helgtanvården AB 2021</p>
         </div>
     </footer>
-    <script src="./JS/main.js" defer type="module"></script>
+    <script type="module" src="./JS/main.js"></script>
 </body>
