--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,10 +7,11 @@
     <link href="./Sass/style.css" rel="stylesheet">
     <link href="https://archive.codenoury.se/General Assets/Sass/style.css" rel="stylesheet">
     <title>Helgtandvården</title>
-    <meta property="og:title" content="x">
-    <meta property="og:description" content="x">
-    <meta property="og:site" content="x">
-    <meta property="og:site_name" content="x">
+    <meta property="og:title" content="Helgtandvården">
+    <meta property="og:description" content="Kliniken för helgtandvård">
+    <meta property="og:site" content="https://helgtandvården.se">
+    <meta property="og:site_name" content="Helgtandvården.se">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
 </head>
 <body>
     <header>
@@ -46,13 +47,19 @@
         </div>
         <div class="content-w-80">
             <div class="col">
-                <h2 class="load">Din nya helgklinik</h2>
+                <h2 class="load">Din nya tandläkare</h2>
                 <p class="large w-80-perc color-white-1 load">
-                    Välkommen till den nya tandvårdskliniken helgtandvården, 
-                    här arbetar välmeriterade tandläkare specialiserade inom estetik, Invisalign (osynlig tandreglering/ställning) och implantat, 
-                    alla dagar i veckan, 
-                    för samma priser som folktandvården där vi även erbjuder prisgaranti och räntefri delbetalning.
+                    Välkommen till din nya tandvårdsklinik Helgtandvården <br>
+                    Här arbetar välmeriterade tandläkare alla dagar i veckan
+                    med Hollywoodsmile, Implantat, och allmäntandvård
+                    för samma priser som op folktandvården. Vi erbjuder dessutom
+                    5 års räntefri delbetalning för din behandling hos oss                 
                 </p>
+            </div>
+        </div>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+
             </div>
         </div>
         <div class="content-w-80">
@@ -73,8 +80,9 @@
             <div class="footer-col">
                 <ul>
                     <li><h5>Helgtandvården</h5></li>
-                    <li><a href="mailto: ndiman@outlook.com">ndiman@outlook.com</a></li>
-                    <li>Org.nr: 559355-7332</li>
+                    <li><a href="tel: +46760758758"></a>+4676 07 58 758</li>
+                    <li><a href="mailto: info@helgtandvarden.se">info@helgtandvarden.se</a></li>
+                    <li>Sankt Eriksgatan 54, 112 34 Stockholm, Sverige</li>
                     <li><a href="https://www.google.com/maps/place/Lill%C3%A5v%C3%A4gen+43,+128+45+Bagarmossen,+Sverige/data=!4m2!3m1!1s0x465f78513549aeab:0x11c2605576c53b2e?sa=X&ved=2ahUKEwicx_Lax9z0AhXipIsKHTGrC0MQ8gF6BAgPEAE">Lillåvägen 43, 128 45 Bagarmossen, Sverige</a></li>
                     <li>Öppettider: Mån-Sön: 07:00 - 21:00</li>
                 </ul>
@@ -94,5 +102,19 @@
         <div class="footer-row">
         </div>
     </footer>
+
+    <div id="popupWindow" aria-label="hidden">
+        <div class="window-wrapper">
+            <a><span id="popupClose">&#10006;</span></a>
+            <p>
+                Ta del av vår tillfälliga kampanj
+                Undersökning + hollywoodsmile konsultation + tandhygienistrengöring.
+                Ordinariepris 2600k, nu endast 299kr <br>
+                (Ditt allmänna tandvårdsbidrag förbrukas om du eventuellt skulle ha några)
+                Boka tid nu
+            </p>
+            <a class="button button-blue button-pill" href="https://www.muntra.com/helgtandvarden/c/2604/?referral_source=helgtandv%C3%A5rden.se/">Boka nu</a>
+        </div>
+    </div>
     <script src="./JS/main.js" defer type="module"></script>
 </body>
