--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,7 +27,7 @@
             </a>
             <div class="nav-desktop">
                 <ul>
-                    <li><a href="mailto: ndiman@outlook.com" class="button button-blue button-pill">Kontakta oss</a></li>
+                    <li><a href="mailto: info@helgtandvarden.se" class="button button-blue button-pill">Kontakta oss</a></li>
                 </ul>
             </div>
         </nav>
@@ -60,13 +60,12 @@
             </div>
         </div>
         <div class="swiper">
-            <div class="swiper-wrapper">
-
-            </div>
+            <div class="swiper-wrapper"></div>
         </div>
         <div class="content-w-80">
             <h2 class="fade-in">Hitta till oss</h2>
-            <iframe class="google-embed fade-in" style="border:0" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJq65JNVF4X0YRLjvFdlVgwhE&key=AIzaSyCeLyjX_oPfyXFdbrM58RSZz-lX-zclCNE"></iframe>
+            <iframe class="google-embed fade-in"width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJHRGAF3ydX0YR8R16WYaTSbA&key=AIzaSyCeLyjX_oPfyXFdbrM58RSZz-lX-zclCNE"></iframe> 
+            
         </div>
     </main>
 
@@ -84,8 +83,7 @@
                     <li><h5>Helgtandvården</h5></li>
                     <li><a href="tel: +46760758758"></a>+4676 07 58 758</li>
                     <li><a href="mailto: info@helgtandvarden.se">info@helgtandvarden.se</a></li>
-                    <li>Sankt Eriksgatan 54, 112 34 Stockholm, Sverige</li>
-                    <li><a href="https://www.google.com/maps/place/Lill%C3%A5v%C3%A4gen+43,+128+45+Bagarmossen,+Sverige/data=!4m2!3m1!1s0x465f78513549aeab:0x11c2605576c53b2e?sa=X&ved=2ahUKEwicx_Lax9z0AhXipIsKHTGrC0MQ8gF6BAgPEAE">Lillåvägen 43, 128 45 Bagarmossen, Sverige</a></li>
+                    <li><a href="https://www.google.com/maps/place/Sankt+Eriksgatan+54,+112+34+Stockholm/data=!4m2!3m1!1s0x465f9d7c1780111d:0xb0499386597a1df1?sa=X&ved=2ahUKEwjGmerjkPn2AhUDv4sKHUgjDt8Q8gF6BAgXEAE">Sankt Eriksgatan 54, 112 34 Stockholm, Sverige</a></li>
                     <li>Öppettider: Mån-Sön: 07:00 - 21:00</li>
                 </ul>
             </div>
