slider & google review fix

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Kliniken för helgtandvård">
     <meta property="og:site" content="https://helgtandvården.se">
     <meta property="og:site_name" content="Helgtandvården.se">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./Assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./Assets/favicon-16x16.png">
@@ -60,7 +61,7 @@
             </div>
         </div>
         <div class="swiper">
-            <div class="swiper-wrapper"></div>
+            <div class="swiper-wrapper" data-slide="0"></div>
         </div>
         <div class="content-w-80">
             <h2 class="fade-in">Hitta till oss</h2>
@@ -71,7 +72,7 @@
 
     <footer>
         <div class="footer-row">
-            <a class="nav-logo" href="https://archive.codenoury.se/sqcars">
+            <a class="nav-logo">
                 <img src="./Assets/helgtandvard-logo.svg">
                 <h4 class="clr-white">Helgtandvården</h4>
             </a>
@@ -81,7 +82,7 @@
             <div class="footer-col">
                 <ul>
                     <li><h5>Helgtandvården</h5></li>
-                    <li><a href="tel: +46760758758"></a>+4676 07 58 758</li>
+                    <li><a href="tel: +46760758758">+4676 075 87 58</a></li>
                     <li><a href="mailto: info@helgtandvarden.se">info@helgtandvarden.se</a></li>
                     <li><a href="https://www.google.com/maps/place/Sankt+Eriksgatan+54,+112+34+Stockholm/data=!4m2!3m1!1s0x465f9d7c1780111d:0xb0499386597a1df1?sa=X&ved=2ahUKEwjGmerjkPn2AhUDv4sKHUgjDt8Q8gF6BAgXEAE">Sankt Eriksgatan 54, 112 34 Stockholm, Sverige</a></li>
                     <li>Öppettider: Mån-Sön: 07:00 - 21:00</li>
