--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,10 +53,11 @@
                 <h2 class="load">Din nya tandläkare</h2>
                 <p class="large w-80-perc color-white-1 load">
                     Välkommen till din nya tandvårdsklinik Helgtandvården <br>
-                    Här arbetar välmeriterade tandläkare alla dagar i veckan
-                    med Hollywoodsmile, Implantat, och allmäntandvård
-                    för samma priser som op folktandvården. Vi erbjuder dessutom
-                    5 års räntefri delbetalning för din behandling hos oss                 
+                    Här arbetar välmeriterade tandläkare <br>
+                    Alla dagar i veckan <br>
+                    Med Hollywoodsmile, Implantat, och allmäntandvård <br>
+                    För samma priser som folktandvården <br>
+                    5års räntefri delbetalning för din behandling <br>
                 </p>
             </div>
         </div>
@@ -82,7 +83,7 @@
             <div class="footer-col">
                 <ul>
                     <li><h5>Helgtandvården</h5></li>
-                    <li><a href="tel: +46760758758">+4676 075 87 58</a></li>
+                    <li><a href="tel: +46760758758">+46760 758 758</a></li>
                     <li><a href="mailto: info@helgtandvarden.se">info@helgtandvarden.se</a></li>
                     <li><a href="https://www.google.com/maps/place/Sankt+Eriksgatan+54,+112+34+Stockholm/data=!4m2!3m1!1s0x465f9d7c1780111d:0xb0499386597a1df1?sa=X&ved=2ahUKEwjGmerjkPn2AhUDv4sKHUgjDt8Q8gF6BAgXEAE">Sankt Eriksgatan 54, 112 34 Stockholm, Sverige</a></li>
                     <li>Öppettider: Mån-Sön: 07:00 - 21:00</li>
