--- a/public_html/index.html
+++ b/public_html/index.html
@@ -111,7 +111,7 @@
             <p>
                 Ta del av vår tillfälliga kampanj
                 Undersökning + hollywoodsmile konsultation + tandhygienistrengöring.
-                Ordinariepris 2600k, nu endast 299kr <br>
+                Ordinariepris 2600 SEK, nu endast 399 SEK <br>
                 (Ditt allmänna tandvårdsbidrag förbrukas om du eventuellt skulle ha några)
                 Boka tid nu
             </p>
